# indigo-assignment

./: .dockerignore  .env.example  Dockerfile  Open-answers.md  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt  test_mcp.py
app/: main.py
app/api/: routes.py
app/core/: auth.py  config.py  logging.py
app/db/: session.py
app/mcp/: metadata.py  router.py  server.py  tools.py
app/models/: __init__.py  chunk.py  document.py
app/repositories/: documents.py
app/schemas/: document.py  search.py
app/services/: chunking.py  documents.py  embeddings.py  parsers.py  search.py
frontend/: Dockerfile  index.html  package.json
frontend/scripts/: write-runtime-config.js
frontend/src/: App.jsx  api.js  styles.css
tests/: test_chunking.py  test_parsers.py
